--- a/index.html
+++ b/index.html
@@ -73,9 +73,39 @@
                </article>
             </section>
             <h1>TREND</h1>
-            <section id="TREND"></section>
-            <h1>EVENT</h1>
-            <section id="EVENT"></section>
+            <section id="TREND">
+               <div class="top">
+                  <img src="img/trend01.jpg" alt="" />
+                  <div class="trend_content">
+                     <p>듀얼 브레인</p>
+                     <p>이선 몰릭 <span>/ 저자</span></p>
+                     <p>신동숙 <span>/ 역식자</span></p>
+                     <div><span>#미래의 일자리</span></div>
+                     <div><span>#미래를 그리다</span></div>
+                     <div><span>#미래전략</span></div>
+                     <div><span>#AI관련서</span></div>
+                     <div><button>보러가기</button></div>
+                  </div>
+               </div>
+               <div class="bottom">
+                  <article class="book01">
+                     <img src="img/trend01.jpg" alt="" />
+                  </article>
+                  <article class="book02">
+                     <img src="img/trend02.jpg" alt="" />
+                  </article>
+                  <article class="book03">
+                     <img src="img/trend03.jpg" alt="" />
+                  </article>
+                  <article class="book04">
+                     <img src="img/trend04.jpg" alt="" />
+                  </article>
+               </div>
+            </section>
+
+            <section id="EVENT">
+               <h1>EVENT</h1>
+            </section>
          </div>
       </main>
       <footer></footer>
