--- a/index.html
+++ b/index.html
@@ -48,17 +48,21 @@
             <section id="INFO">
                <div class="info_img"></div>
                <div class="info_content">
-                  <h1>문화 콘텐츠 플랫폼 yes24</h1>
+                  <h2>문화 콘텐츠 플랫폼 yes24</h2>
                   <p>
-                     문화콘텐츠 자체보다 그 안의 내용을 향유하며 각자가 얻는
-                     가치가 중요합니다.
+                     문화콘텐츠 자체보다 그 안의 내용을 향유하며 <br />각자가
+                     얻는 가치가 중요합니다.
                   </p>
                   <p>
-                     우리는 책과 공연, 웹툰/웹소설, NFT 아트 등 문화 생활의
-                     즐거움을 선사하고 사람들에게 보다 나은 일상을 살아가기 위한
-                     활력과 동기를 불어넣습니다. 예스24는 사람들이 다양한
-                     문화·예술 콘텐츠를 통해 영감을 얻고 진취적인 태도로 삶을 더
-                     의미있게 향유하는 것을 돕습니다.
+                     우리는 책과 공연, 웹툰/웹소설, NFT 아트 등 문화 생활의<br />
+                     즐거움을 선사하고 사람들에게 보다 나은 일상을 살아가기
+                     위한<br />
+                     활력과 동기를 불어넣습니다.
+                  </p>
+                  <p>
+                     예스24는 사람들이 다양한 문화·예술 콘텐츠를 통해 영감을
+                     얻고 <br />진취적인 태도로 삶을 더 의미있게 향유하는 것을
+                     돕습니다.
                   </p>
                   <p>
                      이것이 예스24가 생각하는 문화콘텐츠 플랫폼의 본질입니다.
