반응형 추가

--- a/index.html
+++ b/index.html
@@ -28,8 +28,27 @@
                <div class="join">회원가입</div>
                <div class="search"><img src="img/search.png" alt="검색" /></div>
             </div>
+            <div class="show_mobile"></div>
          </div>
-         <div id="mobile_header"></div>
+         <div id="mobile_menu">
+            <div class="menu_content">
+               <div class="user">
+                  <div class="search">
+                     <img src="img/search.png" alt="검색" />
+                  </div>
+                  <div class="login">로그인</div>
+                  <div class="join">회원가입</div>
+               </div>
+               <nav>
+                  <ul>
+                     <li><a href="#INFO">INFO</a></li>
+                     <li><a href="#VALUE">VALUE</a></li>
+                     <li><a href="#TREND">TREND</a></li>
+                     <li><a href="#EVENT">EVENT</a></li>
+                  </ul>
+               </nav>
+            </div>
+         </div>
       </header>
       <main>
          <div class="main_section">
