--- a/search.html
+++ b/search.html
@@ -8,14 +8,52 @@
    </head>
    <body>
       <header>
+         <div class="back"><a href="index.html">메인으로 돌아가기</a></div>
          <h1>도서 검색</h1>
-         <input type="text" />
-         <button>검색</button>
+         <div class="search_box">
+            <input type="text" /> <button>검색</button>
+         </div>
       </header>
       <main>
-         <ul>
-            <li></li>
-         </ul>
+         <div class="search_wrap">
+            <ul>
+               <li>
+                  <img src="img/trend01.jpg" alt="" />
+                  <div class="search_content">
+                     <p>제목 : 이기적 유전자</p>
+                     <p>저자 : 리처드 도킨스</p>
+                     <p>가격 : 14900</p>
+                  </div>
+               </li>
+               <li>
+                  <img src="img/trend01.jpg" alt="" />
+                  <div class="search_content">
+                     <p>제목 : 이기적 유전자</p>
+                     <p>저자 : 리처드 도킨스</p>
+                     <p>역식자 : 홍영남, 이상임</p>
+                     <p>가격 : 14900</p>
+                  </div>
+               </li>
+               <li>
+                  <img src="img/trend01.jpg" alt="" />
+                  <div class="search_content">
+                     <p>제목 : 이기적 유전자</p>
+                     <p>저자 : 리처드 도킨스</p>
+                     <p>역식자 : 홍영남, 이상임</p>
+                     <p>가격 : 14900</p>
+                  </div>
+               </li>
+               <li>
+                  <img src="img/trend01.jpg" alt="" />
+                  <div class="search_content">
+                     <p>제목 : 이기적 유전자</p>
+                     <p>저자 : 리처드 도킨스</p>
+                     <p>역식자 : 홍영남, 이상임</p>
+                     <p>가격 : 14900</p>
+                  </div>
+               </li>
+            </ul>
+         </div>
       </main>
    </body>
 </html>
