--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <div class="menu_content">
                <div class="user">
                   <div class="search">
-                     <img src="img/search.png" alt="검색" />
+                     <a href="search.html"
+                        ><img src="img/search.png" alt="검색"
+                     /></a>
                   </div>
                   <div class="login">로그인</div>
                   <div class="join">회원가입</div>
@@ -263,7 +265,7 @@
             </div>
          </section>
       </main>
-      <footer>
+      <footer id="footer">
          <div id="wrap">
             <div class="link_yes24">
                <p>YES24, 문화 콘텐츠의 새로운 장을 열다</p>
