--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>search</title>
+      <title>도서 검색</title>
       <link rel="stylesheet" href="css/search.css" />
    </head>
    <body>
@@ -11,49 +11,19 @@
          <div class="back"><a href="index.html">메인으로 돌아가기</a></div>
          <h1>도서 검색</h1>
          <div class="search_box">
-            <input type="text" /> <button>검색</button>
+            <input class="search_input" type="text" />
+            <button onclick="searchClick()">검색</button>
          </div>
       </header>
       <main>
          <div class="search_wrap">
-            <ul>
-               <li>
-                  <img src="img/trend01.jpg" alt="" />
-                  <div class="search_content">
-                     <p>제목 : 이기적 유전자</p>
-                     <p>저자 : 리처드 도킨스</p>
-                     <p>가격 : 14900</p>
-                  </div>
-               </li>
-               <li>
-                  <img src="img/trend01.jpg" alt="" />
-                  <div class="search_content">
-                     <p>제목 : 이기적 유전자</p>
-                     <p>저자 : 리처드 도킨스</p>
-                     <p>역식자 : 홍영남, 이상임</p>
-                     <p>가격 : 14900</p>
-                  </div>
-               </li>
-               <li>
-                  <img src="img/trend01.jpg" alt="" />
-                  <div class="search_content">
-                     <p>제목 : 이기적 유전자</p>
-                     <p>저자 : 리처드 도킨스</p>
-                     <p>역식자 : 홍영남, 이상임</p>
-                     <p>가격 : 14900</p>
-                  </div>
-               </li>
-               <li>
-                  <img src="img/trend01.jpg" alt="" />
-                  <div class="search_content">
-                     <p>제목 : 이기적 유전자</p>
-                     <p>저자 : 리처드 도킨스</p>
-                     <p>역식자 : 홍영남, 이상임</p>
-                     <p>가격 : 14900</p>
-                  </div>
-               </li>
-            </ul>
+            <ul id="bookList"></ul>
+            <div class="page">
+               <button onclick="beforeClick()" class="pagedown">이전</button>
+               <button onclick="nextClick()" class="pageup">다음</button>
+            </div>
          </div>
       </main>
    </body>
+   <script src="js/search.js"></script>
 </html>
