--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
                   <article class="book02">
                      <img src="img/trend02.jpg" alt="" />
                   </article>
-                  <article class="book03">
+                  <article class="book03 down">
                      <img src="img/trend03.jpg" alt="" />
                   </article>
-                  <article class="book04">
+                  <article class="book04 down">
                      <img src="img/trend04.jpg" alt="" />
                   </article>
                </div>
