반응형수정(모바일)

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <p>이기적 유전자</p>
                         <p>리처드 도킨스 <span>/ 저자</span></p>
                         <p>홍영남, 이상임 <span>/ 역식자</span></p>
-                        <div><span>#페이커가읽은책책</span></div>
+                        <div><span>#페이커가읽은책</span></div>
                         <div><span>#인문위클리레터에소개된책</span></div>
                         <div><span>#tvN비밀독서단추천도서</span></div>
                         <div><span>#EBS위대한수업</span></div>
