반응형 최종 수정

--- a/index.html
+++ b/index.html
@@ -84,14 +84,13 @@
                      얻는 가치가 중요합니다.
                   </p>
                   <p>
-                     우리는 책과 공연, 웹툰/웹소설, NFT 아트 등 문화 생활의<br />
-                     즐거움을 선사하고 사람들에게 보다 나은 일상을 살아가기
-                     위한<br />
+                     우리는 책과 공연, 웹툰/웹소설, NFT 아트 등 문화 생활의
+                     즐거움을 선사하고 사람들에게 보다 나은 일상을 살아가기 위한
                      활력과 동기를 불어넣습니다.
                   </p>
                   <p>
                      예스24는 사람들이 다양한 문화·예술 콘텐츠를 통해 영감을
-                     얻고 <br />진취적인 태도로 삶을 더 의미있게 향유하는 것을
+                     얻고 진취적인 태도로 삶을 더 의미있게 향유하는 것을
                      돕습니다.
                   </p>
                   <p>
@@ -169,10 +168,7 @@
                   <div class="top_book03">
                      <img src="img/trend03.jpg" alt="" />
                      <div class="trend_content">
-                        <p>
-                           하루 한 장 나의 어휘력을 <br />
-                           위한 필사 노트
-                        </p>
+                        <p>하루 한 장 나의 어휘력을 위한 필사 노트</p>
                         <p>유선경 <span>/ 저자</span></p>
                         <div><span>#어휘력</span></div>
                         <div><span>#문해력</span></div>
